# RKernel1

./: CMakeLists.txt
FASM/: README.txt
fonts/: genpsfobj.sh
src/: main.c
src/arch/i386/: boot.asm
